fix: image background zoom on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -136,7 +136,6 @@
   top: 0px;
   left: 0px;
   z-index: -1;
-  height: 100vh;
   width: 100%;
   background-repeat: no-repeat;
   background-position: center;
